	PR c++/63925 	* constexpr.c (cxx_eval_increment_expression): Use POINTER_PLUS_EXPR.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@217731 138bc75d-0d04-0410-961f-82ee72b054a4